objects/Listing_Analytics__c.object
<CustomObject>
    <fields>
        <fullName>Action2__c</fullName>
        <label>Action 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_ID__c</fullName>
        <label>Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Listing Analytics</relationshipLabel>
        <relationshipName>Listing_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page_Source__c</fullName>
        <label>Page Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Listing_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Listing Analytics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DateTime__c</columns>
        <columns>User__c</columns>
        <columns>Listing__c</columns>
        <columns>Action__c</columns>
        <columns>Action2__c</columns>
        <columns>Document_ID__c</columns>
        <columns>Page_Source__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LA-{0000000000}</displayFormat>
        <label>Listing Analytics Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>